apps/base/alexraskin-com-staging/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: alexraskin-com
  namespace: web-staging
spec:
  selector:
    app: alexraskin-com
  ports:
    - name: http
      port: 80
      targetPort: http
