apps/base/alexraskin-com-staging/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-tailscale-ingress-only
  namespace: web-staging
spec:
  podSelector:
    matchLabels:
      app: alexraskin-com
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: tailscale
          podSelector:
            matchLabels:
              tailscale.com/managed: "true"
              tailscale.com/parent-resource: ingress
              tailscale.com/parent-resource-type: proxygroup
      ports:
        - protocol: TCP
          port: http
